--- a/Develop/package.json
+++ b/Develop/package.json
@@ -5,9 +5,9 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
+    "develop": "concurrently \"cd server && yarn watch\" \"cd client && yarn start\"",
+    "install": "cd server && yarn && cd ../client && yarn",
+    "build": "cd client && yarn build",
     "render-build": "yarn install && yarn run build"
   },
   "keywords": [],
