--- a/Develop/package.json
+++ b/Develop/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "vite": "^5.2.10"
+  },
+  "resolutions": {
+    "rollup": "desired_version"
   }
 }
